# rationalfitter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  math.hh  matrix.cc  matrix.hh  optimization.hh  polynomial.cc  polynomial.hh  polynomialpinner.cc  rational.cc  rational.hh
src/: math.hh  matrix.cc  matrix.hh  number.hh  optimization.cc  optimization.hh  polynomial.cc  polynomial.hh  rational.cc  rational.hh  rationalfitter.cc
test/: CMakeLists.txt  math.cc  matrix.cc  polynomial.cc  test.hh
